// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`minify option should snapshot with extracting comments: assets 1`] = `
Object {
  "main.js": "/*! For license information please see main.js.LICENSE.txt */
(()=>{var e={293:e=>{e.exports=function(){var baz=document.getElementById(\\"root\\").innerHTML;document.getElementById(\\"demo\\").innerHTML=\\"Paragraph changed.\\"+baz}}},r={};!function t(n){if(r[n])return r[n].exports;var o=r[n]={exports:{}};return e[n](o,o.exports,t),o.exports}(293)})();",
  "main.js.LICENSE.txt": "/* Foo */
",
}
`;

exports[`minify option should snapshot with extracting comments: errors 1`] = `Array []`;

exports[`minify option should snapshot with extracting comments: warnings 1`] = `Array []`;

exports[`minify option should throw an error when an error when the "parallel" option is "false": errors 1`] = `
Array [
  "Error: main.js from Terser
Error: Error",
]
`;

exports[`minify option should throw an error when an error when the "parallel" option is "false": warnings 1`] = `Array []`;

exports[`minify option should throw an error when an error when the "parallel" option is "true": errors 1`] = `
Array [
  "Error: main.js from Terser
Error: Error",
]
`;

exports[`minify option should throw an error when an error when the "parallel" option is "true": warnings 1`] = `Array []`;

exports[`minify option should throw an error when an error: errors 1`] = `
Array [
  "Error: main.js from Terser
Error: Error",
]
`;

exports[`minify option should throw an error when an error: warnings 1`] = `Array []`;

exports[`minify option should work when the "parallel" option is "false": assets 1`] = `
Object {
  "main.js": "(()=>{\\"use strict\\"})();",
}
`;

exports[`minify option should work when the "parallel" option is "false": errors 1`] = `Array []`;

exports[`minify option should work when the "parallel" option is "false": warnings 1`] = `Array []`;

exports[`minify option should work when the "parallel" option is "true": assets 1`] = `
Object {
  "main.js": "(()=>{\\"use strict\\"})();",
}
`;

exports[`minify option should work when the "parallel" option is "true": errors 1`] = `Array []`;

exports[`minify option should work when the "parallel" option is "true": warnings 1`] = `Array []`;

exports[`minify option should work with "terser" minimizer: assets 1`] = `
Object {
  "main.js": "(()=>{\\"use strict\\"})();",
}
`;

exports[`minify option should work with "terser" minimizer: errors 1`] = `Array []`;

exports[`minify option should work with "terser" minimizer: warnings 1`] = `Array []`;

exports[`minify option should work with "uglify-js" minimizer: assets 1`] = `
Object {
  "main.js": "!function(){var r={293:function(e){e.exports=function(){var baz=document.getElementById(\\"root\\").innerHTML;document.getElementById(\\"demo\\").innerHTML=\\"Paragraph changed.\\"+baz}}},o={};!function e(n){if(o[n])return o[n].exports;var t=o[n]={exports:{}};return r[n](t,t.exports,e),t.exports}(293)}();",
}
`;

exports[`minify option should work with "uglify-js" minimizer: errors 1`] = `Array []`;

exports[`minify option should work with "uglify-js" minimizer: warnings 1`] = `Array []`;

exports[`minify option should work with source maps: assets 1`] = `
Object {
  "main.js": "(()=>{\\"use strict\\"})();
//# sourceMappingURL=main.js.map",
  "main.js.map": "{\\"version\\":3,\\"sources\\":[],\\"names\\":[],\\"mappings\\":\\"\\",\\"file\\":\\"main.js\\",\\"sourceRoot\\":\\"\\"}",
}
`;

exports[`minify option should work with source maps: errors 1`] = `Array []`;

exports[`minify option should work with source maps: warnings 1`] = `Array []`;

exports[`minify option should work: assets 1`] = `
Object {
  "main.js": "(()=>{\\"use strict\\"})();",
}
`;

exports[`minify option should work: errors 1`] = `Array []`;

exports[`minify option should work: warnings 1`] = `Array []`;
